# Pete-Eebot

./: .env.sample  .gitignore  .withings_tokens.json  BASELINE_REPORT.md  CONTRIBUTING.md  README.md  REFACTOR_PROMPT_PLAN.md  REPOSITORY_DEEP_DIVE.md  SYSTEM_OVERVIEW.md  docker-compose.yml  issues.json  pyproject.toml  requirements.txt  test_dropbox.py
deprecated/: 013_body_age_sql.sql  015_assistance_pool.sql  016_add_blaze_to_exercises.sql  README.md  V20250918_000_add_mv_unique_indexes.sql  V20250918_002_add_routine_id_to_export_log.sql  wger_exporter_v2.py
docs/: Integrated-personalised-coach.md  adapter_extension_guide.md  api_endpoint_inventory.md  api_v1_migration_note.md  body_age.md  durable_operation_recovery.md  index.html  logging_observability.md  migration_note_prompt12.md  multi_profile_migration_note.md  operator_guide.md  pete_coach_openapi.yaml  planner_feature_flags.md  production_readiness_checklist.md  production_readiness_signoff_template.md  runtime_deploy_runbook.md  unified_global_planner.md  venv_setup.md  web_ui_actionable_backlog.md  web_ui_e2e_review.md  web_ui_evolution_phase_prompts.md  web_ui_evolution_plan.md  web_ui_fix_prompts.md  wger_openapi.yaml
init-db/: 015_assistance_pool.sql  V20250917_000_phase0_quickfixes.sql  V20250917_001_phase1_extensions.sql  V20250917_002_materialise_daily_summary.sql  V20250918_001_strength_test_schema.sql  schema.sql  schmea.sql
knowledge/: history.json
migrations/: 20250927_add_metrics_overview.sql  20250927_fix_daily_summary.sql  20250928_convert_daily_summary_to_table.sql  20251003_update_body_age_function.sql  20260401_harden_plan_generation.sql  20260413_capture_withings_measure_groups.sql  20260421_add_running_prescriptions.sql  20260421_allow_comment_only_plan_sessions.sql  20260423_add_withings_body_comp_metrics.sql  20260423_enrich_body_age_body_comp.sql  20260511_add_nutrition_log.sql  20260511_add_nutrition_log_extended_fields.sql  20260511_add_nutrition_log_updated_at.sql  20260515_add_auth_users_sessions_rbac.sql  20260515_add_user_profiles.sql  20260515_add_web_console_jobs.sql  20260516_add_auth_mfa_fields.sql  20260516_add_job_leases_and_recovery.sql  20260610_add_coach_voice_payloads.sql  20260610_relax_command_history_job_fk.sql
pete_e/: README.md  __init__.py  api.py  api_errors.py  api_logging.py  api_security.py  config.py  logging_setup.py  observability.py
psycopg_mock/: __init__.py
pydantic_mock/: __init__.py
pydantic_settings/: __init__.py
scripts/: backup_db.sh  catalog_refresh.py  check_auth.py  evaluate_strength_test_week.py  export_wger_ingredients.py  generate_block_and_export_week1.py  generate_plan.py  heartbeat_check.py  inspect_withings_response.py  run_ready.sql  (+9 more)
(+318 files in other folders)
