[project]
name = "pete_e"
version = "1.0.0"
description = "Personal health and fitness orchestrator."

# These are the essential packages needed to RUN the application
dependencies = [
    "psycopg[pool]>=3.2,<4",
    "psycopg-binary>=3.2,<4",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.3,<3",
    "requests>=2.32,<3",
    "typer>=0.12,<0.13",
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "Jinja2>=3.1,<4",
    "python-dateutil>=2.9,<3",
    "tenacity>=8.5,<9",
    "dropbox>=11.36.2,<12",
    "setuptools>=70"
]


[project.optional-dependencies]
# These are packages for development, testing, and publishing.
# Install with: pip install .[dev]
dev = [
    "pytest>=8.2,<9",
    "twine>=5.1,<6",
    "ruff>=0.5,<1",
]

[project.scripts]
pete = "pete_e.cli.messenger:app"

[tool.setuptools.packages.find]
where = ["."]