[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pete_e"
version = "1.0.0"
description = "Personal health and fitness orchestrator."

# These are the essential packages needed to RUN the application
dependencies = [
    "psycopg[binary,pool]>=3.2,<4",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.3,<3",
    "requests>=2.32,<3",
    "typer[all]>=0.12,<0.13",
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "Jinja2>=3.1,<4",
    "python-dateutil>=2.9,<3",
    "tenacity>=8.5,<9",
    "dropbox>=12.0.2,<13",
    "fastapi>=0.110,<0.112",
    "python-dotenv>=1.0,<2",
    "uvicorn[standard]>=0.29,<0.30"
]


[project.optional-dependencies]
# These are packages for development, testing, and publishing.
# Install with: pip install .[dev]
dev = [
    "pytest>=8.2,<9",
    "twine>=5.1,<6",
    "ruff>=0.5,<1",
]

[project.scripts]
pete = "pete_e.cli.messenger:app"

[tool.setuptools.packages.find]
where = ["."]
